force-app/main/default/objects/Error_Classification__mdt/Error_Classification__mdt.object-meta.xml
<CustomObject>
    <label>Error Classification</label>
    <pluralLabel>Error Classifications</pluralLabel>
</CustomObject>