force-app/main/default/objects/Error_Classification__mdt/fields/Area__c.field-meta.xml
<CustomField>
    <fullName>Area__c</fullName>
    <label>Area</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AccountManagement</fullName>
                <default>true</default>
                <label>AccountManagement</label>
            </value>
            <value>
                <fullName>ContactManagement</fullName>
            </value>
            <value>
                <fullName>LeadManagement</fullName>
            </value>
            <value>
                <fullName>SendToBackoffice</fullName>
            </value>
            <value>
                <fullName>OpportunityStage</fullName>
            </value>
            <value>
                <fullName>OpportunityManagement</fullName>
            </value>
            <value>
                <fullName>OpportunityData</fullName>
            </value>
            <value>
                <fullName>Order Management</fullName>
            </value>
            <value>
                <fullName>InvoiceOrderDebt</fullName>
            </value>
            <value>
                <fullName>PriceApprovalRequest</fullName>
            </value>
            <value>
                <fullName>SalesPlanFact</fullName>
            </value>
            <value>
                <fullName>ProductionPlan</fullName>
            </value>
            <value>
                <fullName>SalesBudget</fullName>
            </value>
            <value>
                <fullName>AdjustmentQuotaRequest</fullName>
            </value>
            <value>
                <fullName>ProductionQuotes</fullName>
            </value>
            <value>
                <fullName>ProdQuotaManagement</fullName>
            </value>
            <value>
                <fullName>ScrapManagement</fullName>
            </value>
            <value>
                <fullName>UserManagement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>