force-app/main/default/objects/Error_Classification__mdt/fields/AreaType__c.field-meta.xml
<CustomField>
    <fullName>AreaType__c</fullName>
    <label>Area Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ACCOUNT</fullName>
                <default>true</default>
                <label>ACCOUNT</label>
            </value>
            <value>
                <fullName>CONTACTS</fullName>
            </value>
            <value>
                <fullName>LEADS</fullName>
            </value>
            <value>
                <fullName>OPPORTUNITY</fullName>
            </value>
            <value>
                <fullName>ORDER</fullName>
            </value>
            <value>
                <fullName>PAR</fullName>
            </value>
            <value>
                <fullName>PRICE LIST</fullName>
            </value>
            <value>
                <fullName>PROD. QUOTAS</fullName>
            </value>
            <value>
                <fullName>PROD. PLAN</fullName>
            </value>
            <value>
                <fullName>SCRAP</fullName>
            </value>
            <value>
                <fullName>USERS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>