force-app/main/default/objects/Error_Classification__mdt/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DMLOperation</fullName>
                <default>true</default>
                <label>DMLOperation</label>
            </value>
            <value>
                <fullName>DataExchange</fullName>
            </value>
            <value>
                <fullName>RestAPI</fullName>
            </value>
            <value>
                <fullName>Apex</fullName>
            </value>
            <value>
                <fullName>Flow</fullName>
            </value>
            <value>
                <fullName>LWC</fullName>
            </value>
            <value>
                <fullName>Aura</fullName>
            </value>
            <value>
                <fullName>Batch/Queueable</fullName>
            </value>
            <value>
                <fullName>Limit Exception</fullName>
            </value>
            <value>
                <fullName>Scheduler</fullName>
            </value>
            <value>
                <fullName>User Action</fullName>
            </value>
            <value>
                <fullName>REST/SOAP API</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>