force-app/main/default/objects/Error_Classification__mdt/fields/CriticalLevel__c.field-meta.xml
<CustomField>
    <fullName>CriticalLevel__c</fullName>
    <label>Critical Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Critical</fullName>
                <default>true</default>
                <label>Critical</label>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Warning</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>