force-app/main/default/objects/Error_Classification__mdt/fields/Default_Notification_Event__c.field-meta.xml
<CustomField>
    <fullName>Default_Notification_Event__c</fullName>
    <label>Default Notification Event</label>
    <length>100</length>
    <type>Text</type>
</CustomField>