force-app/main/default/objects/Error_Classification__mdt/fields/ErrorKey__c.field-meta.xml
<CustomField>
    <fullName>ErrorKey__c</fullName>
    <label>Error Code / Key</label>
    <length>100</length>
    <type>Text</type>
</CustomField>