force-app/main/default/objects/Error_Classification__mdt/fields/ReactTimeHours__c.field-meta.xml
<CustomField>
    <fullName>ReactTimeHours__c</fullName>
    <label>React Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>