force-app/main/default/objects/Error_Classification__mdt/fields/SubCategory__c.field-meta.xml
<CustomField>
    <fullName>SubCategory__c</fullName>
    <label>SubCategory</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SOQL Limit</fullName>
                <default>true</default>
                <label>SOQL Limit</label>
            </value>
            <value>
                <fullName>Delete/Upsert Exception</fullName>
            </value>
            <value>
                <fullName>Insert/Update Exception</fullName>
            </value>
            <value>
                <fullName>Incorrect Data</fullName>
            </value>
            <value>
                <fullName>Duplicate Error</fullName>
            </value>
            <value>
                <fullName>Heap Limit</fullName>
            </value>
            <value>
                <fullName>JSON Exception</fullName>
            </value>
            <value>
                <fullName>Callout Exception</fullName>
            </value>
            <value>
                <fullName>Server Response Error</fullName>
            </value>
            <value>
                <fullName>Apex CPU time limit</fullName>
            </value>
            <value>
                <fullName>Workflow/Job</fullName>
            </value>
            <value>
                <fullName>Bulk API</fullName>
            </value>
            <value>
                <fullName>Server Request Error</fullName>
            </value>
            <value>
                <fullName>Recurring Callout Exception</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>