force-app/main/default/objects/Error_Classification__mdt/listViews/All_Errors.listView-meta.xml
<ListView>
    <fullName>All_Errors</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <columns>Area__c</columns>
    <columns>AreaType__c</columns>
    <columns>Category__c</columns>
    <columns>ErrorKey__c</columns>
    <columns>ReactTimeHours__c</columns>
    <columns>SubCategory__c</columns>
    <columns>CriticalLevel__c</columns>
    <columns>Default_Notification_Event__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Errors</label>
    <language>en_US</language>
</ListView>